fix:放弃重写list对象，改为官方函数